--- a/song.html
+++ b/song.html
@@ -24,7 +24,12 @@
 		</div>
 		<div class="lyric">
 			<div class="song-name"></div>
-			<div class="song-lyric"></div>
+			<div class="lyric-container">
+				<div class="song-lyric">
+
+				</div>
+			</div>
+
 		</div>
 		<div class="links"></div>
 	</div>
